--- a/scss/site.scss
+++ b/scss/site.scss
@@ -51,32 +51,38 @@ body{
 
 .peta40-flex-header {
     display: flex;
-    justify-content: space-around;
-    align-content: center;
-    img {
-        height: 395px;
-    }
-    .peta40logo {
-        height: 338px;
-        max-width: 100% !important;
-        
-    }
-    .mobile-star-group {
-        height: auto;
-        width: 96px;
-        align-self: center;
-    }
+    justify-content: space-evenly !important;
+    align-items: center !important;
+}
+
+.peta40-flex-header img {
+    height: 395px;
+}
+.peta40-flex-header .peta40logo {
+    height: 338px;
+    max-width: 100% !important;
+    
+}
+.peta40-flex-header .mobile-star-group {
+    height: auto;
+    width: 96px;
+    align-self: center;
+}
+.home-content, .donate-content {
+    background-color: #fff !important;
 }
 
 .party-title {
-    font-family: 'Great Vibes',Arial, Helvetica, sans-serif;
+    position: relative;
+    font-family: "Great Vibes",Arial, Helvetica, sans-serif;
     color: #D5AA00;
     text-align: center;
     font-size: 4rem;
 }
 
 .party-subheading {
-    font-family: 'AllerDisplay',Arial, Helvetica, sans-serif;
+    position: relative;
+    font-family: "AllerDisplay",Arial, Helvetica, sans-serif;
     font-size: 3.25rem;
     font-weight: bolder;
     text-align: center;
@@ -87,22 +93,22 @@ body{
 .peta40-info {
     padding-right: 2rem;
     font-size: 1.2rem;
-    p {
-        margin-bottom: 1rem;
-    }
+}
+
+.peta40-info p {
+    margin-bottom: 1.5rem;
 }
 
 .peta40-btn-list {
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     float: right;
 }
 
 .peta40-btn-list .button {
-    background-color: #5BA4DC !important;
     text-align: left !important;
     height: 48px !important;
     font-size: 1.1rem !important;
-    font-family: "AllerBold", Arial, Helvetica, sans-serif !important;
+    font-weight: 600;
 }
 
 .peta40-btn-list .button span {
@@ -117,6 +123,11 @@ body{
     main {
         padding: 2rem !important;
     }
+
+    .party-subheading {
+        font-size: 2.4rem !important;
+    }
+
     .peta40-btn-list {
         float: none;
     }
@@ -157,9 +168,10 @@ footer {
     padding-left: 0 !important;
     margin-left: 0 !important;
     margin-top: 1rem !important;
-    a, a:hover {
-        color: #003477 !important;
-    }
+}
+
+.ftr-menu a, .ftr-menu a:hover {
+    color: #003477 !important;
 }
 
 .peta-logo-ftr, .fb-logo-ftr, .twitter-logo-ftr {
