--- a/scss/settings.scss
+++ b/scss/settings.scss
@@ -88,7 +88,7 @@ $darker-gray: #434343;
 $party-title-color: get-color(party-title);
 $body-background: $white;
 $body-font-color: get-color(body-text);
-$body-font-family: AllerRegular,'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$body-font-family: "AllerRegular",'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-safe-padding: false;
 $body-antialiased: true;
 $global-margin: 1rem;
@@ -463,10 +463,10 @@ $input-font-family: inherit;
 $input-font-size: rem-calc(16);
 $input-font-weight: $global-weight-normal;
 $input-line-height: $global-lineheight;
-$input-background: $white;
-$input-background-focus: $white;
+$input-background: #FAFAFA;
+$input-background-focus: #FAFAFA;
 $input-background-disabled: $light-gray;
-$input-border: 1px solid $medium-gray;
+$input-border: 1px solid #B4B4B4;
 $input-border-focus: 1px solid $dark-gray;
 $input-padding: $form-spacing * 0.5;
 $input-shadow: inset 0 1px 2px rgba($black, 0.1);
@@ -484,7 +484,7 @@ $label-background: $primary-color;
 $label-color: $white;
 $label-color-alt: $black;
 $label-palette: $foundation-palette;
-$label-font-size: 0.8rem;
+$label-font-size: 1.2rem;
 $label-padding: 0.33333rem 0.5rem;
 $label-radius: $global-radius;
 
