--- a/scss/site.scss
+++ b/scss/site.scss
@@ -76,13 +76,18 @@ body {
 		align-self: center;
 	}
 }
+
 .home-content {
+    position: relative;
 	background-color: #fff !important;
+    z-index: 2;
 }
 .donate-content {
+    position: relative;
 	background-color: #fff !important;
 	color: #000 !important;
 	font-size: 1.2rem;
+    z-index: 2;
 }
 .party-title {
 	position: relative;
@@ -249,10 +254,28 @@ footer {
 	.inner-content {
 		padding: 3rem !important;
 	}
-	.main {
+	main {
 		padding-left: 3rem !important;
 		padding-right: 3rem !important;
 	}
+
+    main {
+        position: relative;
+        background-color: #fff;
+        &::after {
+            content: "";
+            background-image: url('../assets/img/stars-for-header-left-edit@2x.png'), url('../assets/img/stars-for-header-right-edit@2x.png');
+            background-size: 700px;
+            background-position: left center, right center;
+            background-repeat: repeat-y;
+            position: absolute;
+            top: 0px;
+            right: 0px;
+            bottom: 0px;
+            left: 0px;
+            opacity: 0.15;
+        }
+    }
 }
 @media screen and (max-width: 992px) {
 	.peta40logo {
